--- a/BrowserLibCore/BrowserLibCore.csproj
+++ b/BrowserLibCore/BrowserLibCore.csproj
@@ -5,4 +5,8 @@
 		<Platforms>x86;x64</Platforms>
 	</PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="MagicOnion" Version="3.0.11" />
+	</ItemGroup>
+
 </Project>
