--- a/ElectronicObserver/ElectronicObserver.csproj
+++ b/ElectronicObserver/ElectronicObserver.csproj
@@ -143,7 +143,15 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DiscordRichPresence" Version="1.0.121" />
+    <PackageReference Include="Grpc" Version="2.23.0" />
+    <PackageReference Include="Grpc.Core" Version="2.23.0" />
+    <PackageReference Include="Grpc.Core.Api" Version="2.25.0" />
     <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="MagicOnion" Version="3.0.11" />
+    <PackageReference Include="MagicOnion.Abstractions" Version="3.0.11" />
+    <PackageReference Include="MagicOnion.Hosting" Version="2.7.1" />
+    <PackageReference Include="MessagePack" Version="2.1.90" />
+    <PackageReference Include="MessagePack.Annotations" Version="2.1.90" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
