--- a/WPFBrowser/WPFBrowser.csproj
+++ b/WPFBrowser/WPFBrowser.csproj
@@ -59,10 +59,10 @@
 		</Reference>
 	</ItemGroup>
 	<ItemGroup>
-	  <Compile Update="Properties\BrowserResources.Designer.cs">
+	  <Compile Update="Properties\Resources.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
-	    <DependentUpon>BrowserResources.resx</DependentUpon>
+	    <DependentUpon>Resources.resx</DependentUpon>
 	  </Compile>
 	  <Compile Update="Properties\Settings.Designer.cs">
 	    <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -71,12 +71,12 @@
 	  </Compile>
 	</ItemGroup>
 	<ItemGroup>
-	  <EmbeddedResource Update="Properties\BrowserResources.en.resx">
+	  <EmbeddedResource Update="Properties\Resources.en.resx">
 	    <Generator></Generator>
 	  </EmbeddedResource>
-	  <EmbeddedResource Update="Properties\BrowserResources.resx">
+	  <EmbeddedResource Update="Properties\Resources.resx">
 	    <Generator>PublicResXFileCodeGenerator</Generator>
-	    <LastGenOutput>BrowserResources.Designer.cs</LastGenOutput>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
 	  </EmbeddedResource>
 	</ItemGroup>
 	<ItemGroup>
